--- a/application/docker-compose.webapp.yml
+++ b/application/docker-compose.webapp.yml
@@ -1,21 +1,21 @@
 version: "3"
 services:
   mongodb: 
-    image: yourregistry.azurecr.io/bib/mongo:5
+    image: renatemanual.azurecr.io/mongo:latest
 
   mongo-seed: #this is used to populate the DB, see dockerfile for import command
     build: 
       context: ./db-seed
       args:
         HOST: mongodb
-    image: yourregistry.azurecr.io/bib/mongo-seed:webapp
+    image: renatemanual.azurecr.io/application_mongo-seed:latest
     depends_on:
       - mongodb
           
   api:
     build:
       context: ./api
-    image: yourregistry.azurecr.io/bib/api
+    image: renatemanual.azurecr.io/application_api:latest
     depends_on:
       - mongodb
     environment:
@@ -26,7 +26,7 @@ services:
   frontend:
     build:
       context: ./frontend
-    image: yourregistry.azurecr.io/bib/frontend
+    image: renatemanual.azurecr.io/application_frontend:latest
     depends_on:
       - api
     environment:
